<resources>
    <string name="app_name">MyPets</string>
    <string name="hint_text_username">Username</string>
    <string name="hint_text_password">Password</string>
    <string name="btn_text_login">Sign in</string>
    <string name="btn_text_Register">Sign up</string>

    <!-- Register user activity -->
    <string name="activity_label">New user</string>
    <string name="userName_label">E-mail</string>
    <string name="Password_label">Password</string>
    <string name="BtnRegisterLabel">Register</string>

</resources>
