<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:padding="20dp"
android:background="@drawable/pets_bg"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom">

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_text_username"
                android:inputType="textPersonName"
                android:textColorHint="@color/colorHint"
                android:background="@drawable/style_login"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_text_password"
                android:inputType="textPersonName"
                android:textColorHint="@color/colorHint"
                android:background="@drawable/style_login"
                android:layout_marginBottom="10dp"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/style_login"
                android:onClick="btnGotoLogin"
                android:text="@string/btn_text_login"
                android:textColor="@color/colorBtnLoginText"
                android:textStyle="bold"
                />

            <Button
                android:id="@+id/buttonregister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/style_login"
                android:onClick="btnGoToRegister"
                android:text="@string/btn_text_Register"
                android:textColor="@color/colorBtnLoginText"
                android:textStyle="bold"
                />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>